istio-auth/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-server
  namespace: istio-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-server
  template:
    metadata:
      labels:
        app: oauth-server
    spec:
      containers:
      - name: oauth-server
        image: sohamdalvi1011/oauth-server:v2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-server
  namespace: istio-task
spec:
  selector:
    app: oauth-server
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
