istio-auth/keycloak-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
    - "keycloak.192.168.1.247.nip.io"  # Must match Gateway host
  gateways:
    - keycloak-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak.keycloak.svc.cluster.local
            port:
              number: 8080
