istio-auth/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: soham-policy
  namespace: istio-task
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET"]
