istio-auth/oauth-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-allow-jwt
  namespace: istio-task
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[iat]
          values: ["1"]
